Added some validation for args input.